// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rdme docs GHA onboarding E2E tests should create GHA workflow with version passed as opt (github flag enabled) 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/docs-test-file-github-flag.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme docs GHA onboarding E2E tests should create GHA workflow with version passed as opt (github flag enabled) 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`docs-test-branch-github-flag\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - docs-test-branch-github-flag

jobs:
  rdme-docs:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`docs\` command 🚀
        uses: readmeio/rdme@7.5.0
        with:
          rdme: docs ./__tests__/__fixtures__/docs/new-docs --key=\${{ secrets.README_API_KEY }} --version=1.0.0
"
`;

exports[`rdme docs GHA onboarding E2E tests should create GHA workflow with version passed in via opt 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/docs-test-file.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme docs GHA onboarding E2E tests should create GHA workflow with version passed in via opt 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`docs-test-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - docs-test-branch

jobs:
  rdme-docs:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`docs\` command 🚀
        uses: readmeio/rdme@7.5.0
        with:
          rdme: docs ./__tests__/__fixtures__/docs/new-docs --key=\${{ secrets.README_API_KEY }} --version=1.0.0
"
`;

exports[`rdme docs GHA onboarding E2E tests should create GHA workflow with version passed in via prompt 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/docs-test-file.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`rdme docs GHA onboarding E2E tests should create GHA workflow with version passed in via prompt 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`docs-test-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - docs-test-branch

jobs:
  rdme-docs:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`docs\` command 🚀
        uses: readmeio/rdme@7.5.0
        with:
          rdme: docs ./__tests__/__fixtures__/docs/new-docs --key=\${{ secrets.README_API_KEY }} --version=1.0.1
"
`;
